# DasVerdeSpiel

./: .gitignore  CMakeLists.txt  readme.md
src/: glfw.cpp  glfw.h  main.cpp  mesh.h  test_code.h
src/my_GLFW/: glfw.h
